[package]
name = "lilyenv"
version = "1.6.0"
authors = ["Lily Acorn"]
edition = "2024"
description = "A Python interpreter and virtualenv manager"
readme = "README.md"
repository = "https://github.com/LilyFoote/lilyenv"
keywords = ["python", "virtualenv"]
categories = ["command-line-utilities", "development-tools", "virtualization"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.6.0"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
current_platform = "0.2.0"
directories = "6.0.0"
flate2 = "1.1.4"
http = "1.3.1"
nom = "8.0.0"
octocrab = "0.46.0"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
scraper = "0.24.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
thiserror = "2.0.17"
tokio = "1.47.1"
url = "2.5.7"
zstd = "0.13.3"
